# src/swagger/jsons/swagger.json
@@ -47,14 +47,14 @@
             }
         },
 
-        "/episodes/title/{name}": {
+        "/episodes/title/{title}": {
             "get": {
                 "summary": "Requisição dos Episodios",
                 "description": "Essa rota do tipo get, retorna todos os episodios",
                 "tags": ["Episodes"],
                 "parameters": [
                     {
-                      "name": "name",
+                      "name": "title",
                       "in": "path",
                       "description": "titulo do episódio",
                       "required": true,
